plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'systems.manifold.manifold-gradle-plugin' version '0.0.2-alpha'
	id 'maven-publish'
    id 'com.google.devtools.ksp' version("2.3.9")
    id "org.jetbrains.kotlin.jvm" version "2.3.0"
}

version = "${project.mod_version}+${project.minecraft_version}"
group = project.maven_group

base {
	archivesName = project.archives_base_name
}


manifold {
    manifoldVersion = '2026.1.13'
}

repositories {
    maven {
        url = "https://repo.hypixel.net/repository/Hypixel"
    }
    maven {
        url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1"
    }
}

loom {
    mixin {
        //defaultRefmapName.set("mixins.rsm.refmap.json")
        //useLegacyMixinAp = true
    }
    accessWidenerPath = file("src/main/resources/rsm.accesswidener")

    runConfigs.named("client") {
        vmArgs.addAll(
                "-Dmixin.debug.export=true",
                "-Ddevauth.enabled=true",
                "-Ddevauth.account=a",
                "-XX:+AllowEnhancedClassRedefinition"
        )
    }
}

ksp {
    arg("incremental", "false")
    arg("correctErrorTypes", "true")
}

configurations {
    testAnnotationProcessor.extendsFrom annotationProcessor
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    compileOnly "com.google.code.findbugs:jsr305:3.0.2"
    compileOnly "com.google.errorprone:error_prone_annotations:2.18.0"

    ksp(project("annotation-processor"))

    def lwjglVersion = property("minecraft_lwjgl_version")
    implementation "org.lwjgl:lwjgl-nanovg:$lwjglVersion"
    include "org.lwjgl:lwjgl-nanovg:$lwjglVersion"

    ["windows", "linux", "macos", "macos-arm64"].each { os ->
        implementation "org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-$os"
        include "org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-$os"
    }

    implementation "org.lwjgl:lwjgl-yoga:$lwjglVersion"
    include "org.lwjgl:lwjgl-yoga:$lwjglVersion"
    ["natives-linux", "natives-windows", "natives-macos", "natives-macos-arm64"].each {natives ->
        include("org.lwjgl:lwjgl-yoga:$lwjglVersion:$natives")
        implementation("org.lwjgl:lwjgl-yoga:$lwjglVersion:$natives")
    }

    implementation("net.hypixel:mod-api:${project.hypixel_mod_api_version}")

    annotationProcessor "org.projectlombok:lombok:1.18.46"
    compileOnly "org.projectlombok:lombok:1.18.46"


    annotationProcessor "systems.manifold:manifold:${manifold.manifoldVersion.get()}"
    testAnnotationProcessor "systems.manifold:manifold:${manifold.manifoldVersion.get()}"
    implementation "systems.manifold:manifold-rt:${manifold.manifoldVersion.get()}"

    implementation "systems.manifold:manifold-ext-rt:${manifold.manifoldVersion.get()}"
    annotationProcessor "systems.manifold:manifold-ext:${manifold.manifoldVersion.get()}"

    annotationProcessor "systems.manifold:manifold-strings:${manifold.manifoldVersion.get()}"

    annotationProcessor "systems.manifold:manifold-exceptions:${manifold.manifoldVersion.get()}"
    testAnnotationProcessor "systems.manifold:manifold-exceptions:${manifold.manifoldVersion.get()}"

    implementation "systems.manifold:manifold-collections:${manifold.manifoldVersion.get()}"

    annotationProcessor "systems.manifold:manifold-properties:${manifold.manifoldVersion.get()}"

    implementation "systems.manifold:manifold-props-rt:${manifold.manifoldVersion.get()}"
    annotationProcessor "systems.manifold:manifold-props:${manifold.manifoldVersion.get()}"
    testAnnotationProcessor "systems.manifold:manifold-props:${manifold.manifoldVersion.get()}"
    runtimeOnly "me.djtheredstoner:DevAuth-fabric:1.2.2"
}

if (JavaVersion.current() != JavaVersion.VERSION_1_8 &&
        sourceSets.main.allJava.files.any {it.name == "module-info.java"}) {
    tasks.withType(JavaCompile).configureEach {
        // if you DO define a module-info.java file:
        options.compilerArgs += ['-Xplugin:Manifold', '--module-path', it.classpath.asPath]
    }
} else {
    tasks.withType(JavaCompile).configureEach {
        // If you DO NOT define a module-info.java file:
        options.compilerArgs += ['-Xplugin:Manifold']
    }
}

processResources {
	inputs.property "version", project.mod_version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

    toolchain { languageVersion = JavaLanguageVersion.of(25) }
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

tasks.register('deobfJar', Jar) {
    from sourceSets.main.output
}

tasks.named("compileJava") {
    classpath += files(sourceSets.main.output.resourcesDir)
    dependsOn processResources
    dependsOn("kspKotlin")
}

sourceSets.main.java.srcDir(layout.buildDirectory.dir("generated/ksp/main/java"))


// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifact deobfJar
            groupId = project.maven_group
            artifactId = project.archives_base_name
            version = project.mod_version
        }
    }

	repositories {
        mavenLocal()
	}
}